--- a/lab12/lab12.csproj
+++ b/lab12/lab12.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Date.cs" />
+    <Compile Include="DateMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
